Demo to show how to use images with Webpack

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Yummy food</h1>
+<div>
+  <p>This picture of guacamole is rendered from the image_pack_tag helper (Rails pointing to the Webpack-bundled image url in the packs/manifest.json file).</p>
+  <p><%= image_pack_tag('media/images/guacamole.jpg') %></p>
+</div>
+<div>
+  <p>This picture of burritos is rendered as a background image from a .css file bundled by Webpack</p>
+  <div class="burritos"></div>
+</div>
+<div>
+  <p>This picture of enchiladas is rendered as a background image from a .scss file bundled by Webpack</p>
+  <div class="enchiladas"></div>
+</div>
