Add pikaday demo with ProvidePlugin configuration

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Pikaday demo</h1>
+<div>
+  <form action=""><input type="text" data-datepicker></form>
+</div>
