Add example of a CSS pack

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
+<%= javascript_pack_tag 'home' %>
+<%= stylesheet_pack_tag 'home' %>
 <h1>Welcome#index</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
