Add app/assets example

--- a/app/javascript/css/sass.scss
+++ b/app/javascript/css/sass.scss
@@ -4,3 +4,10 @@
   max-width: 75vh;
   height: 50vh;
 }
+
+.nachos {
+  background-image: url("~images/nachos.jpg");
+  background-position: center;
+  max-width: 75vh;
+  height: 50vh;
+}
