--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,3 +11,7 @@
   <p>This picture of enchiladas is rendered as a background image from a .scss file bundled by Webpack</p>
   <div class="enchiladas"></div>
 </div>
+<div>
+  <p>This picture of nachos is rendered as a background image located in app/assets from a .scss file bundled by Webpack</p>
+  <div class="nachos"></div>
+</div>
